# trend-template

./: .gitignore  .python-version  README.md  expr.ipynb  provider.py  pyproject.toml  scraper.py
resource/: index.parquet
